# ROS2-basics-in-5-days

./: README.md  ROS2_in_5_days.pptx
src-course/actions_quiz/: package.xml  setup.py
src-course/actions_quiz/actions_quiz/: actions_client.py  actions_server.py
src-course/actions_quiz/launch/: actions_quiz_client.launch.py  actions_quiz_server.launch.py
src-course/actions_quiz_msg/: CMakeLists.txt  package.xml
src-course/actions_quiz_msg/action/install/: local_setup.sh  setup.sh
src-course/basics_ros2_multithreading/launch/: face_searcher.launch.py
src-course/basics_ros2_multithreading/scripts/: face_searcher.py  face_searcher_multithreading.py
src-course/client_pkg/: setup.py
src-course/custom_interfaces/: CMakeLists.txt  package.xml
src-course/custom_interfaces/srv/: MyCustomServiceMessage.srv
src-course/exercise31_pkg/: setup.py
src-course/exercise31_pkg/launch/: exercise31_pkg_launch_file.launch.py
src-course/my_action_client/: setup.py
src-course/my_action_client/my_action_client/: action_client.py
src-course/my_action_server/my_action_server/: action_server.py
src-course/my_package/my_package/: simple.py
src-course/publisher_pkg/launch/: publisher_pkg_launch_file.launch.py
src-course/services_quiz/: package.xml  setup.py
src-course/services_quiz/launch/: services_quiz_client.launch.py  services_quiz_server.launch.py
src-course/services_quiz/services_quiz/: service_client.py  service_server.py
src-course/services_quiz_srv/: CMakeLists.txt  package.xml
src-course/subscriber_pkg/launch/: subscriber_pkg_launch_file.launch.py
src-course/topics_quiz/: package.xml  setup.py
src-course/topics_quiz/launch/: topics_quiz.launch.py
src-course/topics_quiz/topics_quiz/: topics_quiz_node.py
src-project/custom_interfaces/: CMakeLists.txt  package.xml
src-project/custom_interfaces/action/: OdomRecord.action
src-project/wall_follower/: package.xml  setup.py
src-project/wall_follower/launch/: main.launch.py  odom_recorder.launch.py  start_wall_finder.launch.py  start_wall_following.launch.py
src-project/wall_follower/wall_follower/: odom_recorder.py  wall_finder.py  wall_following.py
(+4 files in other folders)
